chapter-three finished. Tests were created + validation was added